Changes in 2.1.1:
  o New Features
    * Added repair command as an experimental feature. (CNY-1800)
    * Files marked as "missingok" in encapsulated RPMs now have that
      status represented by a "MissingOkay" flag on the corresponding
      Conary file object. (CNY-3306)
    * Files from encapsulated RPMs now have the mtime from the
      RPM recorded in troveInfo.  The mtime of last change is
      still used to calculate fileIds, preserving knowledge of
      when meaningful file information has changed. (CNY-3307)
    * Added support in verify and update paths for prelinked
      binaries. (CNY-3298)

  o Bug Fixes:
    * Changeset reassembly for capsules ignores directories. (CNY-3305)
    * Encapsulated symbolic links are represented as having the mode
      that will exist on the filesystem, even if that varies from the
      mode recorded in the capsule. (CNY-3304)
    * Previously, getTroveLeavesByPath() didn't return leaves; it
      returned the most recent trove which includes that path.
      It now returns only leaves (most recent versions) that include
      that path, and if the path is only included in older versions,
      no troves are returned. (CNP-184)

  o Internal Changes:
    * Database connection objects now have a close_fork() method that
      closes the connection without notifying the server.

Changes in 2.1.0:
  o New Features
    * Conary now allows packages to be installed using foreign package
      managers via wrapped content called capsules. RPM capsule support
      is included in this release. (CNY-3217, CNY-3213)
    * Added ignoreDependencies configuration option, which allows users
      to specify certain dependency classes which should be ignored
      during installs. The default is "abi rpmlib".
    * The xz compression file format is now supported for decompressing
      sources. (CNY-3207)
    * The changemail.py repository commit action module now takes an